// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test component GifExpertApp should show categories list 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragin Ball"
      key="Dragin Ball"
    />
  </ol>
</Fragment>
`;

exports[`Test component GifExpertApp should show component GifGrid 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
